# networkIDS

./: .gitignore  COMMIT_MESSAGE.txt  GIT_COMMANDS.txt  PRE_COMMIT_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml  render.yaml
backend/: Dockerfile  alembic.ini  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py  redis_client.py
backend/app/middleware/: __init__.py  clerk_auth.py  rate_limit.py  security_headers.py
backend/app/ml/: __init__.py
backend/app/models/: prediction.py  user.py
backend/app/routers/: analytics.py  predictions.py
backend/app/schemas/: __init__.py  prediction.py  user.py
backend/app/services/: ml_service.py  preprocessing.py
backend/tests/: __init__.py  conftest.py  test_analytics_api.py  test_middleware.py  test_ml_service.py  test_predictions_api.py
frontend/: .dockerignore  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/public/: sample_test.csv
frontend/src/: App.tsx  config.ts  index.css  main.tsx  router.tsx
frontend/src/components/: ErrorBoundary.tsx  Header.tsx  InteractiveBackground.tsx  LoadingSpinner.tsx  Toast.tsx
frontend/src/hooks/: useAuthToken.ts
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/pages/: HistoryPage.tsx  LandingPage.tsx  ModelInfoPage.tsx  PredictPage.tsx  ProfilePage.tsx  SignInPage.tsx  SignUpPage.tsx
frontend/src/types/: api.ts
ml/: requirements.txt  train_model.py
ml/models/: model_metadata.json  nids_model_binary.onnx  nids_model_multiclass.onnx
ml/notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_model_training.ipynb
ml/src/: __init__.py
ml/src/data/: __init__.py  (+2 more)
(+14 files in other folders)
